--- a/resources/scss/components/_navbar.scss
+++ b/resources/scss/components/_navbar.scss
@@ -42,8 +42,12 @@
             align-items: center;
             height: 50px;
 
-            img {
+            a {
                 height: 100%;
+
+                img {
+                    height: 100%;
+                }
             }
 
             p {
