--- a/resources/scss/components/_pet.scss
+++ b/resources/scss/components/_pet.scss
@@ -68,6 +68,8 @@ body {
             &-navbar {
                 &-links {
                     &-link {
+                        color: $bg;
+
                         &.active {
                             color: $secondary;
 
