--- a/resources/scss/style.scss
+++ b/resources/scss/style.scss
@@ -102,6 +102,32 @@ body {
                 margin-top: 0;
                 margin-bottom: 20px;
             }
+
+            h4 {
+                font-size: 1.5em;
+                color: $text;
+            }
+
+            ul {
+                margin: 0;
+                margin-bottom: 20px;
+                padding: 0;
+
+                li {
+                    color: $text;
+                }
+            }
+
+
+            &-footer {
+                p {
+                    margin: 0;
+
+                    a {
+                        color: $primary;
+                    }
+                }
+            }
         }
 
         &-info {
