--- a/resources/scss/style.scss
+++ b/resources/scss/style.scss
@@ -271,6 +271,7 @@ body {
 @import "./components/modal";
 @import "./components/auth";
 @import "./components/recipt";
+@import "./components/duvidas";
 
 .hidden {
     display: none !important;
