--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1678,7 +1678,10 @@ body.is-pet .enviar-buttons.submit:hover {
 .parceiros {
   padding-top: 80px !important;
   padding-bottom: 80px !important;
-  text-align: center;
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+  align-items: center;
 }
 @media (max-width: 599px) {
   .parceiros {
@@ -1700,7 +1703,7 @@ body.is-pet .enviar-buttons.submit:hover {
   }
 }
 .parceiros h2 {
-  margin: 0 0 20px;
+  margin: 0;
   color: #5e5f5f;
   font-size: 2em;
 }
@@ -1717,6 +1720,26 @@ body.is-pet .enviar-buttons.submit:hover {
   zoom: 1;
   filter: alpha(opacity=100) grayscale(0);
   opacity: 1;
+}
+.parceiros button {
+  background-color: #fbcf3d;
+  padding: 0 22.5px;
+  height: 40px;
+  display: flex;
+  width: -webkit-max-content;
+  width: -moz-max-content;
+  width: max-content;
+  align-items: center;
+  color: white;
+  font-weight: 600;
+  border-radius: 100px;
+  border: 2px solid #fbcf3d;
+  transition: all ease 0.2s;
+  cursor: pointer;
+}
+.parceiros button:hover {
+  background-color: transparent;
+  color: #fbcf3d;
 }
 
 .footer {
@@ -2066,15 +2089,48 @@ body.is-pet .enviar-buttons.submit:hover {
   height: 100%;
   overflow: hidden;
 }
-.modal-pet-header {
+.modal-parceiros {
+  padding: 15px;
+}
+.modal-parceiros-header {
   margin-bottom: 20px;
 }
-.modal-pet-header h3,
-.modal-pet-header p {
+.modal-parceiros-header h3,
+.modal-parceiros-header p {
   margin: 0;
 }
-.modal-pet-input {
+.modal-parceiros-input {
   max-width: 500px;
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+}
+.modal-parceiros-input input,
+.modal-parceiros-input textarea {
+  padding: 15px;
+  border: 1px solid lightgray;
+  resize: none;
+  border-radius: 3px;
+}
+.modal-parceiros-input button {
+  background-color: #fbcf3d;
+  padding: 0 22.5px;
+  height: 40px;
+  display: flex;
+  width: -webkit-max-content;
+  width: -moz-max-content;
+  width: max-content;
+  align-items: center;
+  color: white;
+  font-weight: 600;
+  border-radius: 100px;
+  border: 2px solid #fbcf3d;
+  transition: all ease 0.2s;
+  cursor: pointer;
+}
+.modal-parceiros-input button:hover {
+  background-color: transparent;
+  color: #fbcf3d;
 }
 
 .auth {
@@ -2387,6 +2443,105 @@ body.is-pet .enviar-buttons.submit:hover {
 .enviar-buttons.submit:disabled:hover {
   background-color: transparent;
   color: lightgray;
+}
+
+.duvidas {
+  background: #f7f7fc;
+}
+.duvidas-container {
+  display: flex;
+  padding-top: 80px !important;
+  padding-bottom: 80px !important;
+  color: #5e5f5f;
+  justify-content: space-between;
+  gap: 60px;
+  align-items: center;
+}
+@media (max-width: 599px) {
+  .duvidas-container {
+    width: 100%;
+    padding: 0 15px;
+  }
+}
+@media (min-width: 600px) and (max-width: 1199px) {
+  .duvidas-container {
+    width: 90%;
+    margin: 0 auto;
+  }
+}
+@media (min-width: 1200px) {
+  .duvidas-container {
+    width: 1200px;
+    margin: 0 auto;
+    padding: 0 15px;
+  }
+}
+@media (max-width: 599px) {
+  .duvidas-container {
+    flex-direction: column;
+    gap: 15px;
+    padding-top: 30px !important;
+    padding-bottom: 60px !important;
+  }
+}
+@media (min-width: 600px) and (max-width: 1199px) {
+  .duvidas-container {
+    gap: 30px;
+  }
+}
+.duvidas-container-text {
+  flex: 1;
+}
+.duvidas-container-text h3 {
+  font-size: 1.5em;
+}
+@media (max-width: 599px) {
+  .duvidas-container-text h3 {
+    text-align: center;
+  }
+}
+.duvidas-container-collapsible {
+  flex: 1.5;
+}
+@media (max-width: 599px) {
+  .duvidas-container-collapsible {
+    width: 100%;
+  }
+}
+@media (min-width: 600px) and (max-width: 1199px) {
+  .duvidas-container-collapsible {
+    flex: 2.5;
+  }
+}
+.duvidas-container-collapsible .collapsible {
+  display: flex;
+  flex-direction: column;
+}
+.duvidas-container-collapsible .collapsible-content-title {
+  background: #fbcf3d;
+  height: 60px;
+  display: flex;
+  align-items: center;
+  padding: 0 15px;
+  border-radius: 3px 3px 0 0;
+  cursor: pointer;
+  gap: 15px;
+  margin-top: 15px;
+  box-shadow: 0 4px 10px -2px lightgray;
+}
+.duvidas-container-collapsible .collapsible-content-title i {
+  color: #f7f7fc;
+}
+.duvidas-container-collapsible .collapsible-content-text {
+  display: none;
+  background: white;
+  border-radius: 0 0 3px 3px;
+  padding: 15px;
+  box-shadow: 0 4px 10px -2px lightgray;
+}
+.duvidas-container-collapsible .collapsible-content-text p {
+  margin: 0;
+  font-size: 0.9em;
 }
 
 .hidden {
