--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -41,6 +41,40 @@ body .page.full {
   width: 100%;
   margin-left: 0;
 }
+body .form {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+  width: 100%;
+}
+body .form input,
+body .form textarea,
+body .form select {
+  width: 100%;
+  padding: 10px;
+  border-radius: 3px;
+  border: 1px solid lightgray;
+}
+body .form button {
+  background-color: #fbcf3d;
+  padding: 0 22.5px;
+  height: 40px;
+  display: flex;
+  width: -webkit-max-content;
+  width: -moz-max-content;
+  width: max-content;
+  align-items: center;
+  color: white;
+  font-weight: 600;
+  border-radius: 100px;
+  border: 2px solid #fbcf3d;
+  transition: all ease 0.2s;
+  cursor: pointer;
+}
+body .form button:hover {
+  background-color: transparent;
+  color: #fbcf3d;
+}
 
 .nav {
   overflow-x: scroll;
@@ -334,6 +368,11 @@ main {
   color: #f7f7fc;
 }
 
+@media (min-width: 600px) and (max-width: 1199px) {
+  .profile {
+    flex-direction: row;
+  }
+}
 .profile-navlist {
   border-radius: 3px;
   box-shadow: 0 0 10px -2px lightgray;
@@ -342,6 +381,11 @@ main {
   height: 100%;
   padding: 0;
   width: 200px;
+}
+@media (max-width: 599px) {
+  .profile-navlist {
+    width: 100%;
+  }
 }
 .profile-navlist li {
   color: #5e5f5f;
@@ -359,22 +403,92 @@ main {
 }
 .profile-navlist li:hover:not(:first-child) {
   cursor: pointer;
-  background: #09f;
-  color: #f7f7fc;
-}
-.profile-navlist li.active {
-  background: #09f;
-  color: #f7f7fc;
+  background: #f7f7fc;
 }
 .profile-navlist-title {
   font-weight: 600;
 }
-.profile-form {
+.profile-context {
+  width: calc(100% - calc(200px - 15px));
+}
+@media (max-width: 599px) {
+  .profile-context {
+    width: 100%;
+  }
+}
+.profile-context-section {
   border-radius: 3px;
   box-shadow: 0 0 10px -2px lightgray;
   margin: 0;
   background: white;
   height: 100%;
-  width: calc(100% - calc(200px - 15px));
+  height: auto;
   padding: 15px;
+  margin-bottom: 15px;
+  display: none;
+}
+.profile-context-section.active {
+  display: block;
+}
+.profile-context-section-header {
+  margin-bottom: 20px;
+}
+.profile-context-section-content {
+  display: flex;
+  justify-content: space-between;
+  gap: 15px;
+}
+@media (max-width: 599px) {
+  .profile-context-section-content {
+    flex-direction: column-reverse;
+  }
+}
+.profile-context-section-content-form {
+  flex: 2;
+  display: flex;
+  align-items: center;
+}
+.profile-context-section-content-picture {
+  flex: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  flex-direction: column;
+  gap: 15px;
+}
+.profile-context-section-content-picture img {
+  max-height: 120px;
+}
+.profile-context-section-content-picture label {
+  align-self: center;
+  background-color: #fbcf3d;
+  padding: 0 22.5px;
+  height: 40px;
+  display: flex;
+  width: -webkit-max-content;
+  width: -moz-max-content;
+  width: max-content;
+  align-items: center;
+  color: white;
+  font-weight: 600;
+  border-radius: 100px;
+  border: 2px solid #fbcf3d;
+  transition: all ease 0.2s;
+  cursor: pointer;
+}
+.profile-context-section-content-picture label:hover {
+  background-color: transparent;
+  color: #fbcf3d;
+}
+.profile-context-section-content-picture small {
+  text-align: center;
+}
+
+.hidden {
+  display: none !important;
+}
+
+.invisible {
+  opacity: 0 !important;
 }
