--- a/resources/scss/components/_form.scss
+++ b/resources/scss/components/_form.scss
@@ -9,6 +9,7 @@
             resize: none;
             background: transparent;
             margin-top: 10px;
+            border-radius: 5px;
 
             &.invalid {
                 border-color: red;
