--- a/public/css/style.css
+++ b/public/css/style.css
@@ -110,6 +110,7 @@ body {
 }
 .pages-content-image img {
   width: 100%;
+  border-radius: 10px;
 }
 .pages-content-text {
   flex: 1;
@@ -149,7 +150,7 @@ body {
   flex-direction: column;
   gap: 15px;
   box-shadow: 0 0 10px 0 lightgray;
-  border-radius: 5px;
+  border-radius: 10px;
 }
 .pages-content-info .block-item a {
   display: flex;
@@ -181,6 +182,7 @@ body {
 }
 .pagination li {
   border: 1px solid lightgray;
+  border-radius: 5px;
 }
 .pagination li.disabled {
   cursor: not-allowed;
@@ -243,8 +245,6 @@ body {
   position: fixed;
   z-index: 9;
   top: 0;
-}
-.nav.fixed {
   background-color: rgba(255, 255, 255, 0.98);
   box-shadow: 0 0 10px -2px lightgray;
 }
@@ -696,7 +696,7 @@ body {
   box-shadow: 2px 4px 10px -2px lightgray;
   display: flex;
   flex-direction: column;
-  border-radius: 5px;
+  border-radius: 10px;
   padding: 15px;
   color: #5e5f5f;
   background: white;
@@ -771,6 +771,7 @@ body {
 }
 .why-us-container-image img {
   width: 100%;
+  border-radius: 10px;
 }
 .why-us-container-text {
   flex: 1;
@@ -824,7 +825,7 @@ body {
   }
 }
 .pet-container {
-  background-image: linear-gradient(to left, rgba(251, 207, 61, 0.2), rgba(251, 207, 61, 0.8) 80%), url("../storage/pet.jpg");
+  background-image: linear-gradient(to left, rgba(67, 126, 106, 0.2), rgba(67, 126, 106, 0.8) 80%), url("../storage/pet.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
@@ -885,7 +886,7 @@ body {
   width: -moz-max-content;
   width: max-content;
   align-items: center;
-  color: #fbcf3d;
+  color: #437e6a;
   font-weight: 600;
   border-radius: 100px;
   border: 2px solid white;
@@ -900,22 +901,19 @@ body {
 }
 
 body.is-pet .nav.fixed .nav-navbar-links-link.active {
-  color: #fc3043;
-}
-body.is-pet .nav-navbar-links-link {
-  color: #f7f7fc;
+  color: #437e6a;
 }
 body.is-pet .nav-navbar-links-link.active {
-  color: #fc3043;
+  color: #437e6a;
 }
 @media (max-width: 599px) {
   body.is-pet .nav-navbar-links-link.active {
     color: #f7f7fc !important;
-    background-color: #fc3043;
+    background-color: #437e6a;
   }
 }
 body.is-pet .nav-navbar-links-link span {
-  background-color: #fc3043;
+  background-color: #437e6a;
   padding: 0 22.5px;
   height: 40px;
   display: flex;
@@ -926,17 +924,17 @@ body.is-pet .nav-navbar-links-link span {
   color: white;
   font-weight: 600;
   border-radius: 100px;
-  border: 2px solid #fc3043;
+  border: 2px solid #437e6a;
   transition: all ease 0.2s;
   cursor: pointer;
 }
 body.is-pet .nav-navbar-links-link span:hover {
   background-color: transparent;
-  color: #fc3043;
+  color: #437e6a;
 }
 @media (min-width: 600px) and (max-width: 1199px) {
   body.is-pet .nav-navbar-cta {
-    background-color: #fc3043;
+    background-color: #437e6a;
     padding: 0 22.5px;
     height: 40px;
     display: flex;
@@ -947,17 +945,17 @@ body.is-pet .nav-navbar-links-link span:hover {
     color: white;
     font-weight: 600;
     border-radius: 100px;
-    border: 2px solid #fc3043;
+    border: 2px solid #437e6a;
     transition: all ease 0.2s;
     cursor: pointer;
   }
   body.is-pet .nav-navbar-cta:hover {
     background-color: transparent;
-    color: #fc3043;
+    color: #437e6a;
   }
 }
 body.is-pet .banner {
-  background-image: linear-gradient(-18deg, rgba(253, 149, 158, 0.4), rgba(255, 224, 227, 0.4) 80%), url("../storage/background-pet.jpeg");
+  background-image: linear-gradient(-18deg, rgba(115, 180, 158, 0.4), rgba(165, 207, 193, 0.4) 80%), url("../storage/background-pet.jpeg");
 }
 body.is-pet .banner-container::before {
   background: url("../storage/dog.png");
@@ -965,7 +963,7 @@ body.is-pet .banner-container::before {
   background-repeat: no-repeat;
 }
 body.is-pet .banner-container-text h4 {
-  color: #fc3043;
+  color: #437e6a;
 }
 body.is-pet .banner-container-text h2 {
   color: #f7f7fc;
@@ -974,7 +972,7 @@ body.is-pet .banner-container-text p {
   color: #f7f7fc;
 }
 body.is-pet .banner-container-text a {
-  background-color: #fc3043;
+  background-color: #437e6a;
   padding: 0 22.5px;
   height: 40px;
   display: flex;
@@ -985,22 +983,22 @@ body.is-pet .banner-container-text a {
   color: white;
   font-weight: 600;
   border-radius: 100px;
-  border: 2px solid #fc3043;
+  border: 2px solid #437e6a;
   transition: all ease 0.2s;
   cursor: pointer;
 }
 body.is-pet .banner-container-text a:hover {
   background-color: transparent;
-  color: #fc3043;
+  color: #437e6a;
 }
 body.is-pet .banner-container-text::before {
-  background-image: radial-gradient(#feaeb5 3px, transparent 3px);
+  background-image: radial-gradient(#83bdaa 3px, transparent 3px);
 }
 body.is-pet .to-top {
-  background-color: #fc3043;
+  background-color: #437e6a;
 }
 body.is-pet .blog-container-link {
-  background-color: #fc3043;
+  background-color: #437e6a;
   padding: 0 22.5px;
   height: 40px;
   display: flex;
@@ -1011,25 +1009,25 @@ body.is-pet .blog-container-link {
   color: white;
   font-weight: 600;
   border-radius: 100px;
-  border: 2px solid #fc3043;
+  border: 2px solid #437e6a;
   transition: all ease 0.2s;
   cursor: pointer;
 }
 body.is-pet .blog-container-link:hover {
   background-color: transparent;
-  color: #fc3043;
+  color: #437e6a;
 }
 body.is-pet .blog-container .posts-item-footer a {
-  color: #fc3043;
+  color: #437e6a;
 }
 body.is-pet .depoimentos {
-  background: linear-gradient(-18deg, #fd6271, #feaeb5 90%);
+  background: linear-gradient(-18deg, #559f86, #83bdaa 90%);
 }
 body.is-pet .depoimentos::before {
-  background-image: radial-gradient(#feaeb5 3px, transparent 3px);
+  background-image: radial-gradient(#83bdaa 3px, transparent 3px);
 }
 body.is-pet .footer {
-  background-color: #fc3043;
+  background-color: #437e6a;
 }
 body.is-pet .footer-container-block .block-header h2 {
   color: white;
@@ -1038,7 +1036,7 @@ body.is-pet .footer-container-block .block-links li a {
   color: white;
 }
 body.is-pet .footer-container-block .block-newsletter .newsletter-input button {
-  background-color: #fc3043;
+  background-color: #437e6a;
   padding: 0 22.5px;
   height: 40px;
   display: flex;
@@ -1049,19 +1047,19 @@ body.is-pet .footer-container-block .block-newsletter .newsletter-input button {
   color: white;
   font-weight: 600;
   border-radius: 100px;
-  border: 2px solid #fc3043;
+  border: 2px solid #437e6a;
   transition: all ease 0.2s;
   cursor: pointer;
 }
 body.is-pet .footer-container-block .block-newsletter .newsletter-input button:hover {
   background-color: transparent;
-  color: #fc3043;
+  color: #437e6a;
 }
 body.is-pet .footer-container-block .block-newsletter p {
   color: white;
 }
 body.is-pet .footer-copy {
-  background: #f5041a;
+  background: #315d4e;
 }
 body.is-pet .footer-copy-container p {
   color: white;
@@ -1070,7 +1068,7 @@ body.is-pet .footer-copy-container ul li a {
   color: white;
 }
 body.is-pet .enviar-buttons button.next {
-  background-color: #fc3043;
+  background-color: #437e6a;
   padding: 0 22.5px;
   height: 40px;
   display: flex;
@@ -1081,16 +1079,16 @@ body.is-pet .enviar-buttons button.next {
   color: white;
   font-weight: 600;
   border-radius: 100px;
-  border: 2px solid #fc3043;
+  border: 2px solid #437e6a;
   transition: all ease 0.2s;
   cursor: pointer;
 }
 body.is-pet .enviar-buttons button.next:hover {
   background-color: transparent;
-  color: #fc3043;
+  color: #437e6a;
 }
 body.is-pet .enviar-buttons.submit {
-  background-color: #fc3043;
+  background-color: #437e6a;
   padding: 0 22.5px;
   height: 40px;
   display: flex;
@@ -1101,7 +1099,7 @@ body.is-pet .enviar-buttons.submit {
   color: white;
   font-weight: 600;
   border-radius: 100px;
-  border: 2px solid #fc3043;
+  border: 2px solid #437e6a;
   transition: all ease 0.2s;
   cursor: pointer;
   width: 100%;
@@ -1109,7 +1107,7 @@ body.is-pet .enviar-buttons.submit {
 }
 body.is-pet .enviar-buttons.submit:hover {
   background-color: transparent;
-  color: #fc3043;
+  color: #437e6a;
 }
 
 .blog {
@@ -1344,6 +1342,7 @@ body.is-pet .enviar-buttons.submit:hover {
   overflow: hidden;
   background: white;
   transition: all ease 0.1s;
+  border-radius: 10px;
 }
 .blog-section-content .blog-content-posts .post-image {
   height: 250px;
@@ -1430,6 +1429,7 @@ body.is-pet .enviar-buttons.submit:hover {
 .blog-section-content .blog-aside-blocks .block {
   border: 1px solid lightgray;
   padding: 15px;
+  border-radius: 5px;
 }
 .blog-section-content .blog-aside-blocks .block h5 {
   margin: 0;
@@ -1627,7 +1627,7 @@ body.is-pet .enviar-buttons.submit:hover {
   width: 500px;
   height: 380px;
   background-color: white;
-  border-radius: 5px;
+  border-radius: 10px;
   box-shadow: 5px 5px 10px -5px rgba(0, 0, 0, 0.4);
   padding: 30px;
 }
@@ -1743,7 +1743,7 @@ body.is-pet .enviar-buttons.submit:hover {
 }
 
 .footer {
-  background-color: #fbcf3d;
+  background-color: #5e5f5f;
   display: flex;
   justify-content: space-between;
   flex-direction: column;
@@ -1756,7 +1756,7 @@ body.is-pet .enviar-buttons.submit:hover {
   }
 }
 .footer-container {
-  color: #5e5f5f;
+  color: #f7f7fc;
   flex: 1;
   display: flex;
   align-items: center;
@@ -1828,7 +1828,7 @@ body.is-pet .enviar-buttons.submit:hover {
   gap: 5px;
 }
 .footer-container-block .block-links li a {
-  color: #5e5f5f;
+  color: #f7f7fc;
 }
 .footer-container-block .block-newsletter .newsletter-input {
   background-color: white;
@@ -1877,7 +1877,7 @@ body.is-pet .enviar-buttons.submit:hover {
   font-size: 0.9em;
 }
 .footer-copy {
-  background: #fac30b;
+  background: #454545;
 }
 .footer-copy-container {
   display: flex;
@@ -1915,7 +1915,7 @@ body.is-pet .enviar-buttons.submit:hover {
 }
 .footer-copy-container p {
   margin: 0;
-  color: #5e5f5f;
+  color: #f7f7fc;
   font-size: 0.8em;
 }
 .footer-copy-container ul {
@@ -1925,7 +1925,7 @@ body.is-pet .enviar-buttons.submit:hover {
   gap: 15px;
 }
 .footer-copy-container ul li a {
-  color: #5e5f5f;
+  color: #f7f7fc;
 }
 
 .team {
@@ -1995,6 +1995,7 @@ body.is-pet .enviar-buttons.submit:hover {
   resize: none;
   background: transparent;
   margin-top: 10px;
+  border-radius: 5px;
 }
 .form-input input.invalid,
 .form-input textarea.invalid {
@@ -2216,7 +2217,7 @@ body.is-pet .enviar-buttons.submit:hover {
 }
 .auth-form input {
   width: 100%;
-  border-radius: 3px;
+  border-radius: 5px;
   padding: 15px;
   background: #f7f7fc;
   border: 1px solid #f7f7fc;
@@ -2263,7 +2264,7 @@ body.is-pet .enviar-buttons.submit:hover {
 }
 
 .enviar {
-  padding: 135px 0;
+  padding: 0 0 30px;
   background: #f7f7fc;
 }
 @media (max-width: 599px) {
@@ -2293,7 +2294,7 @@ body.is-pet .enviar-buttons.submit:hover {
 .enviar-container-steps-step {
   flex: 1;
   background: white;
-  border-radius: 5px;
+  border-radius: 10px;
   box-shadow: 0 0 10px -2px lightgray;
   transition: all ease 0.2s;
   padding: 15px;
@@ -2523,7 +2524,7 @@ body.is-pet .enviar-buttons.submit:hover {
   display: flex;
   align-items: center;
   padding: 0 15px;
-  border-radius: 3px 3px 0 0;
+  border-radius: 10px;
   cursor: pointer;
   gap: 15px;
   margin-top: 15px;
@@ -2535,7 +2536,7 @@ body.is-pet .enviar-buttons.submit:hover {
 .duvidas-container-collapsible .collapsible-content-text {
   display: none;
   background: white;
-  border-radius: 0 0 3px 3px;
+  border-radius: 0 0 10px 10px;
   padding: 15px;
   box-shadow: 0 4px 10px -2px lightgray;
 }
